--- a/index.html
+++ b/index.html
@@ -3,22 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/device.css">
-    <link rel="stylesheet" href="assets/icons/css/all.css">
+    <link rel="shortcut icon" href="assets/imgs/favicon.ico" type="image/x-icon">
     <title>Valderik Fernando</title>
 </head> 
 <body>  
     <div class="container">
-        <header class="head-fixed">
-            <div class="navbar">
-                <a href="#home" class="link"><span>Home</span></a>
-                <a href="#about" class="link"><span>About</span></a>
-                <a href="#resume" class="link"><span>Resume</span></a>
+        <!-- HEADER -->
+        <header class="header">
+            <div class="header-content space-between">
+                <div class="logo-name space-center">
+                    <div class="logo">
+                        <a href="#home"><img class="logo" src="assets/imgs/Vk-Logo.png" alt=""></a>
+                    </div>
+                    <div class="name">
+                        <a href="#home"><span>rannos.</span></a>
+                    </div>
+                </div>
+                <div class="navbar space-end">
+                    <a href="#about" class="link"><span>about</span></a>
+                    <a href="#resume" class="link"><span>portifólio</span></a>
+                    <a href="#resume" class="link"><span>contact</span></a>
+                </div>
             </div>
         </header>
 
-        <session class="grids">
+        <!-- ROUTER -->
+        <session class="section">
             <div class="grid" id="home">
                 <div class="grid-container">
                     <div class="me">
@@ -26,7 +36,7 @@
                             <h1>Valderik</h1>
                             <h1>Fernando</h1>
                             <p>Webpage Develop</p>
-                            <button>Resume</button>
+                            <button>Portifólio</button>
                             <button>Download CV</button>
                         </div>
                     </div>
@@ -54,4 +64,12 @@
         </session>
     </div>
 </body>
+
+<!-- | Css | -->
+<link rel="stylesheet" href="styles/global.css">
+<link rel="stylesheet" href="styles/device.css">
+<link rel="stylesheet" href="assets/icons/css/all.css">
+
+<!-- | Js | -->
+
 </html>
