--- a/index.html
+++ b/index.html
@@ -20,27 +20,28 @@
                     </div>
                 </div>
                 <div class="navbar space-end">
-                    <a href="#about" class="link"><span>about</span></a>
+                    <a href="#about" class="link"><span>sobre</span></a>
                     <a href="#resume" class="link"><span>portifólio</span></a>
-                    <a href="#resume" class="link"><span>contact</span></a>
+                    <a href="#resume" class="link"><span>contacto</span></a>
                 </div>
             </div>
         </header>
 
         <!-- ROUTER -->
-        <session class="section">
-            <div class="grid" id="home">
-                <div class="grid-container">
-                    <div class="me">
-                        <div>
-                            <h1>Valderik</h1>
-                            <h1>Fernando</h1>
-                            <p>Webpage Develop</p>
+        <session class="sections">
+            <div class="section home" id="home">
+                <div class="home-content space-start">
+                    <div class="less-me">
+                        <p class="text1">Olá, Eu sou</p>
+                        <h1><span>V</span>alderik <span>F</span>ernando</h1>
+                        <p class="text2">desenvolvedor front-end & design</p>
+                        <div class="btns">
                             <button>Portifólio</button>
                             <button>Download CV</button>
-                        </div>
+                        </div>    
                     </div>
-                    <div class="sc-links">
+
+                    <div class="socials">
                         <div>
                             <span><i class="fab fa-facebook"></i></span>
                             <span><i class="fab fa-instagram"></i></span>
