--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <h1>Quem Sou</h1>
                     </div>
                 </div>
-                <div class="about-content">
+                <div class="about-content space-center">
                     <div class="myPhoto">
                         <img src="assets/imgs/vk.jpg" alt="My Photo">
                     </div>
